[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/background/Floor.png" type="Texture" id=1]
[ext_resource path="res://src/scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/scenes/BlueSphere.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scenes/SpringSphere.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/background/SpecialStageTheme.mp3" type="AudioStream" id=5]
[ext_resource path="res://src/scenes/Ring.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/levels/TestLevel.gd" type="Script" id=7]
[ext_resource path="res://src/scenes/YellowSphere.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/sfx/S3K_perfect.wav" type="AudioStream" id=9]
[ext_resource path="res://src/scenes/Hud.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/scenes/FloorView.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/scenes/SpriteEffects.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/sfx/S3K_makerings.wav" type="AudioStream" id=13]
[ext_resource path="res://src/scenes/Transition.tscn" type="PackedScene" id=14]

[node name="TestLevel" type="Node2D"]
script = ExtResource( 7 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="SFXUniversal" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="MakeSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="Background" type="TextureRect" parent="."]
margin_left = -3072.0
margin_top = -3072.0
margin_right = 3072.0
margin_bottom = 3072.0
texture = ExtResource( 1 )

[node name="BlueSphere4" parent="." instance=ExtResource( 3 )]
position = Vector2( -2971, 2959 )

[node name="BlueSphere5" parent="." instance=ExtResource( 3 )]
position = Vector2( -2590, 2765 )

[node name="BlueSphere6" parent="." instance=ExtResource( 3 )]
position = Vector2( -2593, 2619 )

[node name="BlueSphere7" parent="." instance=ExtResource( 3 )]
position = Vector2( -2787, -2959 )
start_blue = false

[node name="BlueSphere8" parent="." instance=ExtResource( 3 )]
position = Vector2( -2958, 2774 )

[node name="BlueSphere9" parent="." instance=ExtResource( 3 )]
position = Vector2( -87, -850 )
start_blue = false

[node name="BlueSphere10" parent="." instance=ExtResource( 3 )]
position = Vector2( 2971, 2794 )
start_blue = false

[node name="BlueSphere" parent="." instance=ExtResource( 3 )]
position = Vector2( 99, -848 )

[node name="BlueSphere2" parent="." instance=ExtResource( 3 )]
position = Vector2( 2976, -2958 )
start_blue = false

[node name="BlueSphere3" parent="." instance=ExtResource( 3 )]
position = Vector2( 2968, 2964 )
start_blue = false

[node name="SpringSphere" parent="." instance=ExtResource( 4 )]
position = Vector2( 287, -850 )

[node name="SpringSphere2" parent="." instance=ExtResource( 4 )]
position = Vector2( -267, -852 )

[node name="Ring" parent="." instance=ExtResource( 6 )]
position = Vector2( -1051, -94 )

[node name="BlueSphere11" parent="." instance=ExtResource( 3 )]
position = Vector2( -2780, 2605 )

[node name="BlueSphere12" parent="." instance=ExtResource( 3 )]
position = Vector2( -2951, 2594 )
start_blue = false

[node name="BlueSphere13" parent="." instance=ExtResource( 3 )]
position = Vector2( 2976, 2594 )
start_blue = false

[node name="BlueSphere14" parent="." instance=ExtResource( 3 )]
position = Vector2( -2781, 2776 )

[node name="BlueSphere15" parent="." instance=ExtResource( 3 )]
position = Vector2( -2600, -2966 )

[node name="BlueSphere16" parent="." instance=ExtResource( 3 )]
position = Vector2( 472, -667 )

[node name="BlueSphere17" parent="." instance=ExtResource( 3 )]
position = Vector2( -2774, 2966 )

[node name="BlueSphere19" parent="." instance=ExtResource( 3 )]
position = Vector2( -2587, 2958 )

[node name="BlueSphere18" parent="." instance=ExtResource( 3 )]
position = Vector2( -2972, -2963 )
start_blue = false

[node name="YellowSphere" parent="." instance=ExtResource( 8 )]
position = Vector2( -479, -664 )

[node name="FloorView" parent="." instance=ExtResource( 11 )]
visible = false

[node name="SpriteEffects" parent="FloorView" instance=ExtResource( 12 )]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 90, 94 )
z_index = 2

[node name="Hud" parent="." instance=ExtResource( 10 )]
visible = false

[node name="Transition" parent="." instance=ExtResource( 14 )]
